# shadowing_webui

./: .gitignore  LICENSE  Makefile  README.md  caddy.yaml  pyproject.toml
docs/: mobile-browser-workflow.md  vad-architecture-01.md  wasm-plan.md
src/main/: __main__.py  app.py  dev_cache.py  dev_shell.py  mobile_asr_model_bundle.py  qwen_pc_processors.py  qwen_roundtrip_processor.py  qwen_session.py  qwen_tts_asr_roundtrip.py  roundtrip_contract.py  study_bundle.py
src/mobile/: app.js  index.html  ort-webgpu-diagnostic.html  ort-webgpu-diagnostic.js  styles.css
